--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_screenutil: ^5.9.0
   animate_do: ^3.3.4
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
